--- a/P000288.opf/layers/v001/Pagination.yml
+++ b/P000288.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 44409183665d448a8fe3073df3484e39
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   f89ab1079c2f4c44b6cd3bfc64a40081:
