--- a/P000288.opf/meta.yml
+++ b/P000288.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P000288
 initial_creation_type: ocr
 created_at: 21/02/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-16 15:11:09.729084
 source_metadata:
   id: bdr:W1PD137889
   title: མཉམ་མེད་ཇོ་བོ་རྗེ་དཔལ་ལྡན་ཨ་ཏི་ཤའི་རྣམ་པར་ཐར་པ་ཕྱོགས་བསྡུས་དད་པའི་འཇུག་ངོགས།
@@ -14,3 +14,5 @@ source_metadata:
       volume_number: 1
       total_pages: 188
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
